--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -7,8 +7,8 @@ spec:
   project: default
   source:
     repoURL: https://github.com/tuheen27/k8b
-    targetRevision: HEAD
-    path: k8s
+    targetRevision: main    # ✅ real branch name
+    path: .                  # ✅ root folder
   destination:
     server: https://kubernetes.default.svc
     namespace: default
